[gd_scene load_steps=4 format=2]

[ext_resource path="res://Pets/Pet.gd" type="Script" id=1]
[ext_resource path="res://Art/Pets/hp-icon.png" type="Texture" id=2]
[ext_resource path="res://Art/Pets/atk-icon.png" type="Texture" id=3]

[node name="Pet" type="Node2D"]
script = ExtResource( 1 )

[node name="PetSprite" type="Sprite" parent="."]

[node name="HpDisplay" type="Sprite" parent="."]
position = Vector2( 32, 16 )
texture = ExtResource( 2 )

[node name="LblHpValue" type="Label" parent="HpDisplay"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AtkDisplay" type="Sprite" parent="."]
position = Vector2( -24, 16 )
texture = ExtResource( 3 )

[node name="LblAtkValue" type="Label" parent="AtkDisplay"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
